// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextFieldDeprecated /> icon mod renders with mod when customIcon passed 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_icon mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="text"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box mfui-text-field-deprecated__icon-box_custom"
    >
      <div>
        icon
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> icon mod renders with mod when error is true 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_error mfui-text-field-deprecated_icon mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="text"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box"
    >
      <test-file-stub
        className="mfui-text-field-deprecated__icon"
      />
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> icon mod renders with mod when valid is true 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_valid mfui-text-field-deprecated_icon mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="text"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box"
    >
      <test-file-stub
        className="mfui-text-field-deprecated__icon"
      />
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> icon mod renders without mod when isHideIcon is true 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> password type renders with default input 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_password mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="password"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box mfui-text-field-deprecated__icon-box_password"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field-deprecated__icon"
      />
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> password type renders with mask input 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_password mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <[object Object]
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        inputRef={[Function]}
        mask="(999) 999-99-99"
        maskChar=" "
        type="password"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box mfui-text-field-deprecated__icon-box_password"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field-deprecated__icon"
      />
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> renders with mask 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_icon mfui-text-field-deprecated_disabled mfui-text-field-deprecated_color_default mfui-text-field-deprecated_size_large class name"
>
  <InputLabel
    htmlFor="id"
  >
    <div>
      label
    </div>
  </InputLabel>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <[object Object]
        autoComplete="on"
        autoFocus={true}
        className="mfui-text-field-deprecated__field mfui-text-field-deprecated__field_big-space"
        defaultValue="default value"
        disabled={true}
        id="id"
        inputRef={[Function]}
        mask="(999) 999-99-99"
        maskChar=" "
        maxLength={10}
        name="name"
        placeholder="placeholder"
        required={true}
        type="text"
        value="value"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box mfui-text-field-deprecated__icon-box_custom"
    >
      <div>
        custom icon
      </div>
    </div>
  </div>
  <div
    className="mfui-text-field-deprecated__text mfui-text-field-deprecated__text_comment"
  >
    comment text
  </div>
  <div
    className="mfui-text-field-deprecated__text mfui-text-field-deprecated__text_success"
  >
    success text
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> renders with props 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_icon mfui-text-field-deprecated_disabled mfui-text-field-deprecated_color_default mfui-text-field-deprecated_size_large class name"
>
  <InputLabel
    htmlFor="id"
  >
    <div>
      label
    </div>
  </InputLabel>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="on"
        autoFocus={true}
        className="mfui-text-field-deprecated__field mfui-text-field-deprecated__field_big-space"
        defaultValue="default value"
        disabled={true}
        id="id"
        maxLength={10}
        name="name"
        placeholder="placeholder"
        required={true}
        type="text"
        value="value"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box mfui-text-field-deprecated__icon-box_custom"
    >
      <div>
        custom icon
      </div>
    </div>
  </div>
  <div
    className="mfui-text-field-deprecated__text mfui-text-field-deprecated__text_comment"
  >
    comment text
  </div>
  <div
    className="mfui-text-field-deprecated__text mfui-text-field-deprecated__text_success"
  >
    success text
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> renders without no-touch mode 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> renders without props 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> status icons not renders when valid or error is false 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextFieldDeprecated /> status icons renders when valid or error is true 1`] = `
<div
  className="mfui-text-field-deprecated mfui-text-field-deprecated_valid mfui-text-field-deprecated_error mfui-text-field-deprecated_icon mfui-text-field-deprecated_color_default"
>
  <div
    className="mfui-text-field-deprecated__field-wrapper mfui-text-field-deprecated__field-wrapper_no-touch"
  >
    <div>
      <input
        autoComplete="off"
        className="mfui-text-field-deprecated__field"
        type="text"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box"
    >
      <test-file-stub
        className="mfui-text-field-deprecated__icon"
      />
    </div>
    <div
      className="mfui-text-field-deprecated__icon-box"
    >
      <test-file-stub
        className="mfui-text-field-deprecated__icon"
      />
    </div>
  </div>
</div>
`;
